setup.py is ready

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 python-dotenv
 pandas
 numpy
+setuptools
 pymongo
 certifi
 pymongo[srv]
@@ -13,4 +14,4 @@ uvicorn
 python-multipart
 
 
-##-e .
+# -e .
